# zephyr-gl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  commit.yml
cmake/: CMakeLists.txt
src/: main.cpp
src/controllers/: Application.cpp  Application.h
src/domain/: GraphicsDevice.cpp  GraphicsDevice.h  InputDispatcher.cpp  InputDispatcher.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  RessourceManager.cpp  RessourceManager.h  Types.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
src/graphics/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Sampler.cpp  Sampler.h  ShaderModule.cpp  ShaderModule.h  Types.h  Utils.cpp  Utils.h
src/providers/graphics/gl/: GLGraphicsDevice.cpp  GLGraphicsDevice.h
src/providers/windows/: GLFWOpenGLWindow.cpp  GLFWOpenGLWindow.h  OpenGLWindow.h
src/resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
tests/: CMakeLists.txt
tests/unit/: graphics_device_test.cpp  window_test.cpp
